--- a/txtsql.ipynb
+++ b/txtsql.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "txtsql.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO7WkF1KAH5pSWw9wmz/2R7"
+      "authorship_tag": "ABX9TyOIvzlmLYl9aDi/FdogbtOc"
     },
     "kernelspec": {
       "name": "python3",
@@ -1340,6 +1340,17 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DMp_3Rc7AAE5"
+      },
+      "source": [
+        "References:\n",
+        "1. https://github.com/salesforce/WikiSQL\n",
+        "2. https://github.com/tiwarikajal/Seq2SQL--Natural-Language-sentences-to-SQL-Queries"
       ]
     }
   ]
